[package]
name = "aply_shared"
version = "0.1.1"
authors = ["Jan Algermissen <algermissen@acm.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
maud = "0.21.0"
jsonwebtoken = "7.2.0"
http = "0.2.1"
warp = "0.2.5"
