[package]
name = "aply_shared"
version = "0.1.6"
authors = ["Jan Algermissen <algermissen@acm.org>"]
edition = "2018"
license = "MIT"
description = "Common elements for a software project."


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
maud = "0.21.0"
jsonwebtoken = "7.2.0"
futures = "0.3.7"
http = "0.2"
warp = "0.2.5"

pubsub_grpc = "0.1"
datastore_grpc = "0.1.1"
hyper = "0.13"
plykit = "0.1.7"

#plykit = { git = "https://github.com/plykit/ply-rust.git" }

#ply = { path = "../ply-rust" }
#ply ={ git = "https://github.com/plykit/ply-rust.git", version = "0.1.0"}
